2003-11-13  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* IRegistrationServices.cs:
	* ITypeLibConverter.cs:
	* ITypeLibExporterNameProvider.cs:
	* ITypeLibExporterNotifySink.cs:
	* ITypeLibImporterNotifySink.cs: Added missing attribute
	* UCOMIBindCtx.cs: Added missing attribute, fixed in attribute
	* UCOMIConnectionPoint.cs:
	* UCOMIConnectionPointContainer.cs:
	* UCOMIEnumConnectionPoints.cs:
	* UCOMIEnumConnections.cs:
	* UCOMIEnumMoniker.cs:
	* UCOMIEnumString.cs:
	* UCOMIEnumVARIANT.cs:
	* UCOMIMoniker.cs:
	* UCOMIPersistFile.cs:
	* UCOMIRunningObjectTable.cs:
	* UCOMIStream.cs:
	* UCOMITypeComp.cs:
	* UCOMITypeInfo.cs:
	* UCOMITypeLib.cs: Added missing attribute

2003-08-06  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* UCOMIBindCtx.cs: Added and implemented
	* UCOMIConnectionPoint.cs: Added and implemented
	* UCOMIConnectionPointContainer.cs: Added and implemented
	* UCOMIEnumConnectionPoints.cs: Added and implemented
	* UCOMIEnumConnections.cs: Added and implemented
	* UCOMIEnumMoniker.cs: Added and implemented
	* UCOMIEnumString.cs: Added and implemented
	* UCOMIEnumVARIANT.cs: Added and implemented
	* UCOMIMoniker.cs: Added and implemented
	* UCOMIPersistFile.cs: Added and implemented
	* UCOMIRunningObjectTable.cs: Added and implemented
	* UCOMIStream.cs: Added and implemented

	* UCOMTypeComp.cs: renamed
	* UCOMTypeInfo.cs: renamed
	* UCOMTypeLib.cs: renamed

	* ITypeLibConverter.cs: Fixed interface signature

	* ComSourceInterfacesAttribute.cs: Added and implemented
	* IDispatchImplAttribute.cs: Added and implemented
	* InvalidComObjectException.cs: Added and implemented
	* InvalidOleVariantTypeException.cs: Added and implemented
	* MarshalDirectiveException.cs: Added and implemented
	* SafeArrayRankMismatchException.cs: Added and implemented
	* SafeArrayTypeMismatchException.cs: Added and implemented
	* SEHException.cs: Added attribute
	* UnknownWrapper.cs: Added and implemented

	* BIND_OPTS.cs:
	* CONNECTDATA.cs:
	* ELEMDESC.cs: