@@ -1,0 +1,22 @@
+//
+// System.Runtime.InteropServices.ExtensibleClassFactory.cs
+//
+// Author:
+//   Andreas Nahr (ClassDevelopment@A-SoftTech.com)
+//
+
+namespace System.Runtime.InteropServices
+{
+	public sealed class ExtensibleClassFactory
+	{
+		private ExtensibleClassFactory ()
+		{
+		}
+
+		[MonoTODO ("implement")]
+		public static void RegisterObjectCreationCallback (ObjectCreationDelegate callback)
+		{
+			throw new NotImplementedException ();
+		}
+	}
+}
